--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <main class="kontainer">
-        <h2 class="mb-4">Kalkulator</h2>
+        <h2 class="mb-4">Kalkulator yang dibuat oleh rafa hafiz iqbal S. | PPLG X-4</h2>
         
         <!-- Pilihan Menu -->
         <section>
@@ -69,6 +69,7 @@
             <p class="mt-3" id="hasil-kalkulator"></p>
         </section>
     </main>
+
     
     <!-- Menghubungkan file JavaScript eksternal -->
     <script src="script.js"></script>
